--- a/css/stile.css
+++ b/css/stile.css
@@ -1,13 +1,52 @@
 
-
 .super-contenitore {
-    background-color: rgba(100, 0, 0, 0.2);
-    margin-left: 6rem;
-    margin-top: 1rem;
+    position: relative;
+    margin-left: 11%;
+    margin-top: 1.7%;
+    background-color: rgba(100, 0, 0, 0.5);
+    width: 78%;
+    height: 30rem;
 }
+
 .contenitore {
     position: relative;
-    background-color: rgba(100, 100, 0, 0.2);
-    width: 14.2rem;
-    height: 20.4rem;
+    background-color: rgba(100, 100, 0, 0.5);
+    width: 300px;
+    height: 480px;
+}
+
+.insersione {
+    position: relative;
+    background-color: rgba(100, 100, 100, 0.5);
+    width: 300px;
+    height: 435px;
+}
+
+.insersione2 {
+    position:relative;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(100, 100, 100, 0.8);
+}
+
+img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+.img1 {
+    position: absolute;
+    z-index: +1 ;
+}
+
+.img2 {
+    position: absolute;
+    z-index: +2;
+    opacity: 0;
+}
+
+.img2:hover {
+    visibility: visible;
+    opacity: 1;
 }
